--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Simple Calculator</string>
     <string name="add">+</string>
     <string name="subtract">-</string>
